--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -190,7 +190,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add latest-stable.json
+          git add latest-*.json
           git commit -am "Update latest.json"
           git push origin HEAD:main
       - name: 'create release'
