--- a/.changes/config.json
+++ b/.changes/config.json
@@ -7,10 +7,7 @@
 			"version": true,
 			"postversion": "cargo tree |> /dev/null",
 			"getPublishedVersion": "git log elk-native-v${ pkgFile.version } -1 --pretty=%Cgreen${ pkgFile.version } || echo \"not published yet\"",
-			"publish": [
-				"git tag elk-native-v${ pkgFile.version } -f",
-				"git push --tags -f"
-			]
+			"publish": ""
 		}
 	}
 }
