fmt & fix lint-rust check

--- a/.github/workflows/lint-rust.yml
+++ b/.github/workflows/lint-rust.yml
@@ -44,11 +44,10 @@ jobs:
         run: |
           mkdir -p elk/.output/public
 
-      - uses: actions-rs/clippy-check@v1
+      - uses: uses: actions-rs/cargo@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          command: clippy
           args: --manifest-path=Cargo.toml --all-targets --all-features -- -D warnings
-          name: clippy
 
       - uses: actions-rs/cargo@v1
         with:
