--- a/.github/workflows/lint-rust.yml
+++ b/.github/workflows/lint-rust.yml
@@ -30,12 +30,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install clippy with stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
           components: clippy, rustfmt
 
       - uses: Swatinem/rust-cache@v2
