--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,11 @@ serde = { version = "1.0", features = [ "derive" ] }
 tauri = { version = "1.2.4", features = ["shell-open", "updater", "window-maximize", "window-start-dragging", "window-unmaximize"] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features = [ "colored" ] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 log = "0.4.17"
 env_logger = "0.10.0"
+thiserror = "1.0.38"
+bincode = "1.3.3"
 
 [features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
+default = ["custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
