--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "elk-native",
   "version": "0.0.0",
-  "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tauri dev",
+    "build": "tauri build"
   },
-  "keywords": [],
-  "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@tauri-apps/cli": "^1.2.3",
     "tiny-glob": "^0.2.9"
   }
 }
